fix: gap

--- a/src/components/modals/Modal/Modal.module.scss
+++ b/src/components/modals/Modal/Modal.module.scss
@@ -59,7 +59,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 16px;
 
   @media screen and (min-width: 380px) {
     gap: 32px;
